<package>
  <name>rostful_node</name>
  <version>0.0.7</version>
  <description>
      ROS Node to provide ROS introspection for non-ROS users.
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/asmodehn/rostful-node</url>
  <url type="bugtracker">https://github.com/asmodehn/rostful-node/issues</url>

  <author email="benkehoe@somewhere.net">Ben Kehoe</author>
  <author email="asmodehn@gmail.com">AlexV</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>roslint</build_depend>
  <!-- gunicorn -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>python-concurrent.futures</build_depend>
  <build_depend>python-zmq</build_depend>
  <!-- <build_depend>python-tblib</build_depend>  Trusty version not working for us. need the submodule dep here -->
  <build_depend>python-six</build_depend> <!-- not sure about this guy yet though -->

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>driver_base</run_depend>
  <!-- gunicorn -->
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>python-concurrent.futures</run_depend>
  <run_depend>python-zmq</run_depend>
  <!-- <run_depend>python-tblib</run_depend> -->
  <run_depend>python-six</run_depend>

  <!-- these dependencies are only for testing -->
  <run_depend>python-yaml</run_depend>
  <build_depend>rostest</build_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>rostopic</test_depend>

  <!-- documentation dependencies -->
  <build_depend>python-catkin-pkg</build_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>


