<package>
  <name>pyros</name>
  <version>0.1.0</version>
  <description>
Provides Python to ROS multiprocess API, useful for using ROS from different multiprocess environment (think webserver, celery, etc.) while keeping both isolated.
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/asmodehn/pyros</url>
  <url type="bugtracker">https://github.com/asmodehn/pyros/issues</url>

  <author email="benkehoe@somewhere.net">Ben Kehoe</author>
  <author email="asmodehn@gmail.com">AlexV</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python-mock</build_depend>

  <build_depend>rospy</build_depend>
  <build_depend>python-concurrent.futures</build_depend>
  <build_depend>python-zmq</build_depend>
  <!-- <build_depend>python-tblib</build_depend>  Trusty version not working for us. need the submodule dep here -->
  <build_depend>python-six</build_depend>
  <build_depend version_eq="0.0.8">pyros_setup</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>python-concurrent.futures</run_depend>
  <run_depend>python-zmq</run_depend>
  <!-- <run_depend>python-tblib</run_depend> -->
  <run_depend>python-six</run_depend>
  <run_depend version_eq="0.0.8">pyros_setup</run_depend>

  <!-- these dependencies are only for testing -->
  <run_depend>python-yaml</run_depend>
  <build_depend>rostest</build_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>rostopic</test_depend>
  <test_depend>rosservice</test_depend>
  <test_depend>rosnode</test_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <test_depend version_eq="0.0.3">pyros_test</test_depend>

  <!-- documentation dependencies -->
  <build_depend>python-catkin-pkg</build_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>


